cargo-features = ["edition2024"]

[package]
name = "rust_client"
edition = "2024"
version = "0.1.0"
authors = ["Oleg"]

[unstable]
unstable-options = true

[dependencies]
crossterm = "=0.27.0"
libc = "=0.2.159"
log = "=0.3.6"
image = "=0.25.5"
syn = { version = "2.0.90", features = ["full","visit","visit-mut"] }
nalgebra = "0.33.2"

[package.metadata.raze.crates.image.'*']
data_attr = "glob([\"**\"])"
compile_data_attr = "glob([\"**\"])"


[[bin]]
name = "main"
path = "src/main.rs"

[package.metadata.raze]
workspace_path = "//client/cargo"
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
output_buildfile_suffix = "BUILD.bazel"
gen_workspace_prefix = "vendored"
genmode = "Vendored"
package_aliases_dir = "cargo"
default_gen_buildrs = true
